# scitech-mgl

./: CMakeLists.txt
.github/workflows/: ci.yml
cmake/: FindKernelHeaders.cmake  mglcpu.cmake
cmake/toolchains/: mingw32.cmake  watcom-base.cmake  watcom-dos4g.cmake
examples/: CMakeLists.txt
examples/mgl/: CMakeLists.txt
examples/mgl/addmode/: CMakeLists.txt
examples/mgl/convert/: CMakeLists.txt
examples/mgl/demo/: CMakeLists.txt  demoarea.cpp  demoarea.hpp
examples/mgl/foxbear/: CMakeLists.txt  sound.c
examples/mgl/gm/: CMakeLists.txt
examples/mgl/hello/: CMakeLists.txt
examples/mgl/mgldog/: CMakeLists.txt
examples/mgl/multi/: CMakeLists.txt
examples/mgl/samples/: CMakeLists.txt  mglsamp.c
examples/mgl/second/: CMakeLists.txt
examples/mgl/showbmp/: CMakeLists.txt
examples/mgl/smacker/: CMakeLists.txt
examples/mgl/stereo/: CMakeLists.txt  mglsamp.c
examples/mgl/wmgldog/: CMakeLists.txt
examples/mgl/wshowbmp/: CMakeLists.txt
examples/mgl/xmgldog/: CMakeLists.txt
examples/mgldoom/: CMakeLists.txt  d_maind.c  fpfunc.asm
examples/opengl/: CMakeLists.txt
examples/opengl/atlantis/: CMakeLists.txt  atlantis.rc
examples/opengl/book/: CMakeLists.txt  demo.rc
examples/opengl/demos/: CMakeLists.txt
examples/opengl/ideas/: CMakeLists.txt
examples/opengl/skyfly/: CMakeLists.txt
include/: cmdline.h  mglsamp.h  mglunix.h  pmapi.h  scitech.mac  ztimer.h
include/clib/: complex.h
include/clib/os/: imports.h
include/fx/: color.h  fixed.h  float.h  vec2d.h
include/mvis/: mevent.hpp  mvision.hpp
include/snap/: gasdk.h
include/snapgl/GL/: glut.h
include/tcl/: array.hpp  hashtab.hpp  str.hpp
src/: CMakeLists.txt
src/common/: _aa_imp.asm  _ga_imp.asm  _gatimer.asm  cmdline.c
src/fixed/: CMakeLists.txt  fixedtst.cpp  fllog.asm  float.c  flsqrt.asm  fltrig.asm  fltst.cpp  fxatrig.asm  fxlog.asm  fxmap2d.asm  fxmap3d.asm  fxmat2d.asm  fxmat3d.asm  fxmisc.asm  fxpow.asm  fxsqrt.asm  fxtrig.asm  fxzdiv.asm  gentable.c  mattst.cpp  vectst.cpp
src/freetype/: CMakeLists.txt  _tt_exp.asm  ftdump.c
src/gconsole/: CMakeLists.txt
src/glswitch/: CMakeLists.txt  _glstub.asm  _glustub.asm  _wglstub.asm
src/glut/: CMakeLists.txt  g_util.cpp  gbitmap.h  gstroke.h
src/glutw32/: CMakeLists.txt  glut_8x13.c  glut_9x15.c  glut_cursor.c  glut_dstr.c  glut_event.c  glut_ext.c  glut_fullscrn.c  glut_gamemode.c  glut_get.c  glut_hel10.c  glut_hel12.c  glut_hel18.c  glut_init.c  glut_input.c  glut_menu.c  glut_menu2.c  glut_overlay.c  glut_swidth.c  glut_tr10.c  glut_tr24.c  glut_util.c  glut_vidresize.c  glut_win.c  glut_winmisc.c  glutint.h  win32_menu.c
src/gm/: CMakeLists.txt  mglgm.rc
src/hdabus/: CMakeLists.txt  _hda_imp.asm
src/infozip/: CMakeLists.txt
src/infozip/unzip/: CMakeLists.txt  crc_i386.asm
src/infozip/zip/: CMakeLists.txt  crc_i386.asm  match32.asm
src/libjpeg/: CMakeLists.txt  _jpg_exp.asm  jpeginit.c
src/libpng/: CMakeLists.txt  _png_exp.asm
src/libtiff/: CMakeLists.txt  tif_bpd.c
src/libxpm/: CMakeLists.txt
src/mgl/: CMakeLists.txt  memset.c  mgraph.c
src/mgl/asm386/: _fix32.asm  _glu.asm  _memset.asm  _opengl.asm  _polyhlp.asm  _random.asm
src/mgl/mglx11/: mglx11.c
src/mvis/: CMakeLists.txt  message.cpp  misc.cpp  mprogram.cpp  safetyp.cpp
src/pm/: CMakeLists.txt  makefile
src/pm/common/: _cpuinfo.asm  _dma.asm  _int64.asm  _joy.asm  _mtrr.asm  _pcihelp.asm  int64.c  pcilib.c
src/pm/dos/: _event.asm  _lztimer.asm  _pm.asm  _pmdos.asm
src/pm/linux/: io.c  pm.c
src/pm/tests/: isvesa.c  timercpp.cpp  video.c
src/pm/win32/: pm.c
src/snap/: CMakeLists.txt  gasdk.c
src/snaprtl/cpplib/iostream/cpp/: mandec.cpp  manendl.cpp
src/tech/: CMakeLists.txt  dynstr.cpp  hashtab.cpp  substr.cpp
src/tech/test/: hashtst.cpp  tststr.cpp
