add_subdirectory(demo)
# FIXME: missing demo3d example
if(0)
    # FIXME: missing "DiamondWare Sound ToolKit"
    add_subdirectory(foxbear)
endif()
add_subdirectory(smacker)
add_subdirectory(mgldog)
add_subdirectory(showbmp)
if(MGL_PLATFORM_WINDOWS)
    add_subdirectory(wmgldog)
    add_subdirectory(wshowbmp)
endif()
add_subdirectory(samples)
add_subdirectory(gm)

add_subdirectory(addmode)
add_subdirectory(convert)
add_subdirectory(hello)
add_subdirectory(multi)
add_subdirectory(second)
add_subdirectory(stereo)
if(MGL_PLATFORM_LINUX)
    add_subdirectory(xmgldog)
endif()
